chore: Ignore glfw3config

--- a/deps/glfw/.gitignore
+++ b/deps/glfw/.gitignore
@@ -25,6 +25,9 @@ src/config.h
 src/glfw3.pc
 src/glfwConfig.cmake
 src/glfwConfigVersion.cmake
+src/glfw_config.h
+src/glfw3Config.cmake
+src/glfw3ConfigVersion.cmake
 
 # Compiled binaries
 src/libglfw.so
